Bug #2350 Validation message should be displayed when upload invalid file format  file except csv file

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -926,7 +926,7 @@ customer.updated=Updated customer {0} successfully.
 customer.deleted=Deleted customer {0}.
 customer.notes=Updated notes for customer {0}
 customer.not.found=Customer {0} not found.
-
+csv.error.found = Upload CSV file only
 current.password.doesnt.match.existing=The entered current password does not match the stored password.
 password.required=Password cannot be blank.
 passwords.dont.match=The password's don't match.
