Bug #2307  -- message : Custom field which have data type should Integer,Decimal,Boolean can accepts value with their respective data type

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -16,6 +16,11 @@ validation.error.not.a.integer=should be an integer value
 validation.error.not.a.number=should be a numeric value
 validation.error.invalid.card.number=should be a valid credit card number
 
+# custom contact field validation in customer page
+custom.contact.field.decimal=Field {0} can accept only {1} value.
+custom.contact.field.integer=Field {0} can accept only {1} value.
+custom.contact.field.boolean=Field {0} can accept only {1} value.
+
 # These are the names of each bean and its fields.
 bean.UserWS.id=number
 bean.UserWS=user
